# pipeline_dab

./: .gitignore  README.md  databricks.yml  pyproject.toml
.github/workflows/: deploy-dev.yml  deploy-prod.yml
resources/: br_pipeline_dab.job.yml  pipeline_dab.job.yml  sl_pipeline_dab.job.yml
src/bronze/: create_workspace.py  insert_itens.py  insert_pessoas.py  insert_pessoas_test.py
src/func/: config.py  get_logging.py
src/notebook/: test.ipynb
src/silver/: create_workspace.py  transform_itens.py  transform_pessoas.py
