[project]
name = "pipeline_dab"
version = "0.0.1"
authors = [{ name = "brunoalvarim1@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "ipykernel",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bronze", "src/func", "src/silver"]

[project.scripts]

#bronze
create_workspace_bronze = "bronze.create_workspace:main"
insert_pessoas = "bronze.insert_pessoas:main"
insert_itens = "bronze.insert_itens:main"

#silver
create_workspace_silver = "silver.create_workspace:main"
transform_pessoas = "silver.transform_pessoas:main"
transform_itens = "silver.transform_itens:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
